// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Terminal Component renders entries correctly 1`] = `
<div
  className="col-lg-3 col-lg-push-3 col-sm-12 console"
>
  <h4>
    Terminal
  </h4>
  <div
    className="control-box"
    style={
      Object {
        "height": "220px",
      }
    }
  >
    <div
      className="log"
      style={
        Object {
          "height": "195",
        }
      }
    >
      <div
        className="info"
      >
        Enter your git commands here!
      </div>
      <div
        className="entries"
      >
        <div
          className="info"
          key="0"
        >
          Darth Malak
        </div>
        <div
          className="info"
          key="1"
        >
          Darth Revan
        </div>
        <div
          className="error"
          key="2"
        >
          Darth Vader
        </div>
        <div
          className="info"
          key="3"
        >
          Darth Sidious
        </div>
      </div>
    </div>
    <form
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        placeholder=" enter git command"
        spellCheck={false}
        type="text"
        value=""
      />
    </form>
  </div>
</div>
`;

exports[`Terminal Component renders the console predictably 1`] = `
<div
  className="col-lg-3 col-lg-push-3 col-sm-12 console"
>
  <h4>
    Terminal
  </h4>
  <div
    className="control-box"
    style={
      Object {
        "height": "220px",
      }
    }
  >
    <div
      className="log"
      style={
        Object {
          "height": "195",
        }
      }
    >
      <div
        className="info"
      >
        Enter your git commands here!
      </div>
      <div
        className="entries"
      />
    </div>
    <form
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        placeholder=" enter git command"
        spellCheck={false}
        type="text"
        value=""
      />
    </form>
  </div>
</div>
`;
